# ai-agent

./: .env.example  README.md  fn_call_genai.py  fn_call_litellm.py  fn_decl_genai.py  fn_decl_litellm.py  fn_langchain.py  multi_langchain.py  prompts.py  pyproject.toml  single_genai.py  single_langchain.py  single_litellm.py  single_litellm_with_mcp.py  test_get_file_content.py  test_get_files_info.py  test_run_python_file.py  test_write_file.py
functions/: get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
mcp_servers/add/: main.py  pyproject.toml
mcp_servers/power/: main.py  pyproject.toml
