[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.12.1",
    "langchain>=1.2.15",
    "langchain-litellm>=0.6.4",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.6",
    "langsmith>=0.7.27",
    "litellm>=1.83.4",
    "mcp>=1.27.0",
    "ruff>=0.15.9",
    "shutup>=0.3.0",
]
